more java fixes